external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_or_types_3.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/invalid_or_types_3.move:10:30
   │
 4 │     X { x: u64 },
   │            --- Given: 'u64'
 5 │     Y(u32)
   │       --- Expected: 'u32'
   ·
10 │         E::X { x: y } | E::Y(y) => *y
   │                              ^ Invalid pattern field type
